Finished all the open issues
